Navbar setups und record imported

--- a/src/app/navbar/navbar.html
+++ b/src/app/navbar/navbar.html
@@ -1,1 +1,11 @@
-<p>navbar works!</p>
+<div class="topbar">
+  <a id="logoBox" routerLink="/home">
+    ATOMIC <br>
+    PUNC
+  </a>
+  <nav class="nav-links">
+    <!-- <a routerLink="/home" routerLinkActive="active" class="navButton">Home</a> -->
+    <a routerLink="/archive" routerLinkActive="active" class="navButton">Atomic Archive</a>
+    <a routerLink="/about" routerLinkActive="active" class="navButton">About</a>
+  </nav>
+</div>
