--- a/src/app/navbar/navbar.html
+++ b/src/app/navbar/navbar.html
@@ -1,7 +1,12 @@
 <div class="topbar">
   <a id="logoBox" routerLink="/home">
-    ATOMIC <br>
-    PUNC
+    <div id="leftLogoPart">
+      ATOMIC <br>
+      PUNC
+    </div>
+    <aside id ="rightLogoPart">
+      <img src="/assets/spinningRecord.gif" alt="" height="90px" width="70px" id="spinningRecord">
+    </aside>
   </a>
   <nav class="nav-links">
     <!-- <a routerLink="/home" routerLinkActive="active" class="navButton">Home</a> -->
@@ -9,3 +14,4 @@
     <a routerLink="/about" routerLinkActive="active" class="navButton">About</a>
   </nav>
 </div>
+
