seiten gebaut, header versteckt, blog template hinzugefügt

--- a/src/app/weekly-album/weekly-album.html
+++ b/src/app/weekly-album/weekly-album.html
@@ -1,6 +1,8 @@
-<h3>Jimi Hendrix</h3>
-<h1 id="AlbumName">ELECTRIC LADYLAND</h1>
-<div class="blog">
+<div id="albumInfo">
+  <h3 id="AlbumArtist">Jimi Hendrix:</h3>
+  <h1 id="AlbumName">ELECTRIC LADYLAND</h1>
+</div>
+<div class="blog" id ="albumBlog">
   Electric Ladyland ist nicht nur das dritte und letzte Studioalbum der Jimi Hendrix
   Experience, sondern auch eines der bedeutendsten Werke der
   Rockgeschichte. Mit diesem Doppelalbum sprengte Hendrix 1968 endgültig die Grenzen dessen,
