--- a/src/app/navbar/navbar.css
+++ b/src/app/navbar/navbar.css
@@ -1,16 +1,17 @@
 .topbar {
   font-family: "Special Elite" ,'Montserrat', sans-serif;
   display: flex;
-  margin: 0px;
   justify-content: space-between;
   align-items: center;
   background: transparent;
   color: black;
-  padding: 0.9rem 1.25rem;
-  position: sticky;
+  padding: 1.25rem 1.25rem;
+  position: fixed;
+  width: 97%;
   top: 0;
   z-index: 1000;
   font-size: larger;
+  border: none;
 }
 .nav-links a {
   color: black;
