--- a/src/app/weekly-album/weekly-album.css
+++ b/src/app/weekly-album/weekly-album.css
@@ -1,6 +1,23 @@
-#AlbumName {
+#albumInfo{
+  margin-top: 10em;
   text-align: center;
-  font-size: 200px;
-  font-weight: 600;
-  margin-bottom: 10px;
 }
+#AlbumArtist{
+  font-size: 3rem;
+  font-weight: 600;
+  transform: translateX(-6em);
+  margin: 0;
+  margin-top: 1em;
+}
+#AlbumName {
+  font-size: clamp(6rem, 18vw, 12rem);
+  font-weight: 600;
+  line-height: 0.95;
+  margin: 0;
+  margin-top: 0.1em;
+  margin-bottom: 0.4em;
+}
+#albumBlog{
+  margin-bottom: 4em;
+}
+
