--- a/src/app/home/home.css
+++ b/src/app/home/home.css
@@ -12,13 +12,14 @@
   text-align: left;
   width: 100%;
   padding-left: 1%;
-  margin-bottom: 3em;
+  margin-bottom: 1em;
 }
 
 .line {
   font-weight: 1000;
   line-height: 0.9;
   font-size: clamp(3.5rem, 13.5vw, 14rem);
+  letter-spacing: 0.02em;
   white-space: nowrap;
 }
 #firstRecordArticle{
