--- a/src/app/weekly-album/weekly-album.css
+++ b/src/app/weekly-album/weekly-album.css
@@ -1,3 +1,9 @@
+#albumCover{
+  border-radius: 20px;
+  margin-bottom: 1em;
+  width: 400px;
+  height: 400px;
+}
 #albumInfo{
   margin-top: 10em;
   text-align: center;
