--- a/src/app/weekly-album/weekly-album.html
+++ b/src/app/weekly-album/weekly-album.html
@@ -1,4 +1,6 @@
+
 <div id="albumInfo">
+  <img id="albumCover" src="/assets/electricLadyland.jpeg" alt="">
   <h3 id="AlbumArtist">Jimi Hendrix:</h3>
   <h1 id="AlbumName">ELECTRIC LADYLAND</h1>
 </div>
