--- a/src/app/archive/archive.html
+++ b/src/app/archive/archive.html
@@ -1,3 +1,30 @@
 <div class="page">
-  <h1 id="archiveTitle">Atomic Archive</h1>
+  <h1 id="archiveTitle">Letzte Woche</h1>
+  <div id="archivedAlbumInfo">
+    <img id="archivedAlbumCover" src="/assets/goldeneZeiten.jpg" alt="">
+    <h3 id="archivedAlbumArtist">Hubert Kah:</h3>
+    <h1 id="archivedAlbumName">Goldene Zeiten</h1>
+  </div>
+  <p class="blog" id="archivedPost">
+    Hubert Kahs „Goldene Zeiten“ wird heute als eines der besten deutschsprachigen Alben der 80er angesehen. Das Album
+    fängt perfekt ein was ich (ich habe natürlich eigentlich keine Ahnung) als den Geist der Zeit im kultivierten, etwas
+    abgehobenen und elaborierten Deutschland der frühen 80er-Jahre empfinde.
+    <br><br>
+    Ein Album muss für mich immer eine Gesamtidee haben, die sich durch das Album zieht. Eine solche kann natürlich auch
+    sein, dass alle Songs total unterschiedlich und aus anderen Genren stammen - ist auch nen beständiger Gedanke, falls
+    man das dann auch so durchzieht. Dieser rote Faden ist FÜR MICH auf dieser Platte jener Zeitgeist, der einen zwingen
+    will, sich einen Rollkragenpullover oder doch ein schickes Hemd mit Cordsakko anzuziehen. Der, der einen reden
+    lassen will wie Falco und der, der ins Ohr geht. <br>
+    Man sollte nun einfach mal die Scheibe laufen lassen, sich das im Kopf klarmachen, und sich bewusst auf dieses
+    Gefühl einlassen.
+    <br><br>
+    Der Grund warum ich dieses Album als allererstes gewählt habe, ist, dass ich glaube, dass man erstmal entspannt an
+    dieses Gefühl herangeführt werden muss, bevor man auch beim hören anderer Platten den Rollkragendrang oder doch auch
+    den Dickenickelbrilledrang verspürt. <i>"Goldene Zeiten"</i> ist dafür wie gemacht, und dabei ist sie nicht so
+    totgehört wie <br> <i>"Falco 3"</i> oder so. Das ist wichtiger als man denkt, denn sonst kickt sofort der Spotify-Instinkt:
+    Die zwei Nummern, die auch als Singles Hits wurden, werden noch zweimal angeklickt, die anderen Songs, die genauso
+    wichtig für das Gesamtkonzept der Platte sind, werden übersprungen. <br>
+    Deshalb auch meine dringende Bitte, sich Kahs Album anzuhören, ohne davor zu checken, welche Songs hier die meisten
+    Streams haben. Wichtiger als man denkt. Lieber selber die Favoriten merken und meistens hat man damit auch Recht…
+  </p>
 </div>
