--- a/src/app/archive/archive.css
+++ b/src/app/archive/archive.css
@@ -2,3 +2,34 @@
   text-align: center;
   font-size: 3em;
 }
+
+#archivedAlbumCover{
+  border-radius: 20px;
+  margin-bottom: 1em;
+  width: 400px;
+  height: 400px;
+}
+#archivedAlbumInfo{
+  margin-top: 10em;
+  text-align: center;
+}
+#archivedAlbumArtist{
+  font-size: 3rem;
+  font-weight: 600;
+  transform: translateX(-6em);
+  margin: 0;
+  margin-top: 1em;
+}
+#archivedAlbumName {
+  font-size: clamp(6rem, 18vw, 12rem);
+  font-weight: 600;
+  line-height: 0.95;
+  margin: 0;
+  margin-top: 0.1em;
+  margin-bottom: 0.4em;
+}
+#archivedPost{
+  margin-bottom: 4em;
+}
+
+
