--- a/src/app/archive/archive.html
+++ b/src/app/archive/archive.html
@@ -20,7 +20,7 @@
     <br><br>
     Der Grund warum ich dieses Album als allererstes gewählt habe, ist, dass ich glaube, dass man erstmal entspannt an
     dieses Gefühl herangeführt werden muss, bevor man auch beim hören anderer Platten den Rollkragendrang oder doch auch
-    den Dickenickelbrilledrang verspürt. <i>"Goldene Zeiten"</i> ist dafür wie gemacht, und dabei ist sie nicht so
+    den Dickenickelbrilledrang verspürt, was natürlich essenziell ist, um ein guter Musik-Nerd zu werden. <i>"Goldene Zeiten"</i> ist dafür wie gemacht, und dabei ist sie nicht so
     totgehört wie <br> <i>"Falco 3"</i> oder so. Das ist wichtiger als man denkt, denn sonst kickt sofort der Spotify-Instinkt:
     Die zwei Nummern, die auch als Singles Hits wurden, werden noch zweimal angeklickt, die anderen Songs, die genauso
     wichtig für das Gesamtkonzept der Platte sind, werden übersprungen. <br>
