Weekly album updatde, about und archive changes.

--- a/src/app/weekly-album/weekly-album.html
+++ b/src/app/weekly-album/weekly-album.html
@@ -1,10 +1,16 @@
-
-<div id="albumInfo">
-  <img id="albumCover" src="/assets/electricLadyland.jpeg" alt="">
-  <h3 id="AlbumArtist">Jimi Hendrix:</h3>
-  <h1 id="AlbumName">ELECTRIC LADYLAND</h1>
+<div id="weeklyAlbumContainer">
+  <div id="leftAlbumInfo">
+    <div id="artist">The Jimi Hendrix Experience, 1968:</div>
+    <div class="line">ELECTRIC</div>
+    <div class="line">LADYLAND</div>
+  </div>
+  <aside id=albumCoverBox>
+    <img id="albumCover" src="/assets/electricLadyland.jpeg" alt="">
+  </aside>
 </div>
-<div class="blog" id ="albumBlog">
+
+<div class="blog" id="albumBlog">
+  <h1><i>Electric Ladyland</i></h1>
   Electric Ladyland ist nicht nur das dritte und letzte Studioalbum der Jimi Hendrix
   Experience, sondern auch eines der bedeutendsten Werke der
   Rockgeschichte. Mit diesem Doppelalbum sprengte Hendrix 1968 endgültig die Grenzen dessen,
