--- a/src/app/about/about.html
+++ b/src/app/about/about.html
@@ -1,21 +1,25 @@
 <div class="page">
   <h1 id="aboutTitle">About Gefasel</h1>
   <p  class="blog" id="aboutGefasel">
-    Jedes Wochenende präsentiere ich hier ein Album, das ich geil finde, und bei dem ich der
-    Meinung bin, dass es hilft, Musik ein bisschen besser zu verstehen. <br> <br>
+    Meine Meinung ist besser und wichtiger als andere. Das ist der wichtigste (einzige) Grund,
+    weshalb ich dieses Projekt hier mache. Ich habe ein ekelhaft anmutendes Mitteilungsbedürfnis
+    und will jedem zeigen, dass ich mir 3 Minuten länger gedanken über eine Platte gemacht habe als
+    er. Die Selbstreflexion darüber macht es nicht besser. Diese Eigenschaft ist im echten Leben leider
+    eher abschreckend und mutet widerlich an, deshalb sitze ich jetzt hier vor meinem Computer.
+    <br><br>
     Wer viel Spotify hört, wird quasi gezwungen immer die gleichen Titel rauf und runter zu hören.
     Die Idee von Alben wird immer unwichtiger, weswegen hier vermutlich eher Alben erscheinen,
     die ein bisschen älter sind. Das heißt aber keinesfalls, dass ich nichts aktuelles hören will,
     und vor allem auch nicht, dass mir davon nix gefällt.
     <br><br>
-    Meine Idee ist es, ein ganzes Jahr lang jede Woche ein Album vorzustellen.
-    Wer alle von denen anhört hat sicherlich eine gute Grundlage Hörer aktueller Musik zu verachten,
+    Jede Woche ein Album.
+    Wer alle von denen anhört hat sicherlich eine gute Grundlage, Hörer aktueller Musik zu verachten,
     sich selbst als erleuchtet zu betrachten und was auch immer.
     <br><br>
     Die perfekte breite eines zu lesenden textes ist nach unanbhängigen Studien zwischen 60 und 75 zeichen. Deshalb ist der text hier
     immer ~60 zeichen breit.
     <br> <br>
-    Falls sich das interessant und enorm edgy anhört, dann ist das schön.
+    Falls sich das interessant und enorm edgy anhört, küss ich euer herz.
   </p>
 </div>
 
