--- a/src/app/weekly-album/weekly-album.css
+++ b/src/app/weekly-album/weekly-album.css
@@ -1,29 +1,50 @@
+#weeklyAlbumContainer {
+  background-color: #424242;
+  color: #ff2b00;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+}
+#leftAlbumInfo{
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  text-align: left;
+  width: 100%;
+  margin-bottom: 0.2em;
+  padding-left: 2em;
+}
+
+.line {
+  font-family: "Fugaz One",'Montserrat', sans-serif;
+  font-weight: 1000;
+  line-height: 0.9;
+  font-size: clamp(3.5rem, 13vw, 13rem);
+  letter-spacing: 0.02em;
+  white-space: nowrap;
+}
+#artist{
+  font-family: "Special Elite" ,'Montserrat', sans-serif;
+  color: #ff2b00;
+  font-style: italic;
+  font-size: clamp(1.5rem, 3vw, 3rem);
+  margin-bottom: 0.5em;
+}
+
+#albumCoverBox{
+  display:flex;
+  align-items: flex-end;
+}
 #albumCover{
-  border-radius: 20px;
+  border-radius: 40px;
   margin-bottom: 1em;
-  width: 400px;
-  height: 400px;
-}
-#albumInfo{
-  margin-top: 10em;
-  text-align: center;
-}
-#AlbumArtist{
-  font-size: 3rem;
-  font-weight: 600;
-  transform: translateX(-6em);
-  margin: 0;
-  margin-top: 1em;
-}
-#AlbumName {
-  font-size: clamp(6rem, 18vw, 12rem);
-  font-weight: 600;
-  line-height: 0.95;
-  margin: 0;
-  margin-top: 0.1em;
-  margin-bottom: 0.4em;
+  width: 22vw;
+  height: 22vw;
+  margin-right: 4em;
+  margin-bottom: 1.8em;
 }
 #albumBlog{
+  margin-top: 4em;
   margin-bottom: 4em;
 }
 
