--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -1,7 +1,7 @@
 <div id="landingPage">
   <div id="landingText">
-    <div class="line">MUSIC NERD</div>
-    <div class="line">IN 52 WOCHEN</div>
+    <div class="line">ATOMIC PUNC</div>
+    <div class="line">OH YEA WOA!</div>
   </div>
 </div>
 <p class="blog" id ="firstRecordArticle">
