Content changes on about and archive

--- a/src/app/about/about.html
+++ b/src/app/about/about.html
@@ -5,7 +5,7 @@
     weshalb ich dieses Projekt hier mache. Ich habe ein ekelhaft anmutendes Mitteilungsbedürfnis
     und will jedem zeigen, dass ich mir 3 Minuten länger gedanken über eine Platte gemacht habe als
     er. Die Selbstreflexion darüber macht es nicht besser. Diese Eigenschaft ist im echten Leben leider
-    eher abschreckend und mutet widerlich an, deshalb sitze ich jetzt hier vor meinem Computer.
+    eher abschreckend und wirkt durchaus widerlich, so sitze ich jetzt hier vor meinem Computer.
     <br><br>
     Wer viel Spotify hört, wird quasi gezwungen immer die gleichen Titel rauf und runter zu hören.
     Die Idee von Alben wird immer unwichtiger, weswegen hier vermutlich eher Alben erscheinen,
