--- a/src/app/navbar/navbar.css
+++ b/src/app/navbar/navbar.css
@@ -15,7 +15,7 @@
 }
 .nav-links a {
   color: black;
-  background: white;
+  background: #f6f3ee;
   text-decoration: none;
   margin-left: 1.5rem;
   font-weight: 500;
@@ -47,7 +47,7 @@
   font-style: normal;
   cursor: pointer;
   color: black;
-  background: white;
+  background: #f6f3ee;
   text-decoration: black;
   padding : 0px 8px;
   display: flex;
